--- a/README
+++ b/README
@@ -2,3 +2,5 @@
 2. From the command line, you can start the server by 'ruby main.rb'
 3. If you have the 'shotgun' gem installed, you can instead run 'shotgun main.rb'
 4. ctrl+c to stop the server
+
+some more crap here
